fix / defects with HS Get in Touch on small screens

--- a/static/css/nav.css
+++ b/static/css/nav.css
@@ -74,3 +74,8 @@
 .distort__img {
   opacity: 0;
 }
+
+/* Workaround for Wordpress stripping out ':' when adding custom classes in CMS */
+.md-hidden {
+  @apply md:hidden;
+}
